# blink

./: .gitignore  CMakeLists.txt  FEATURES.md  sdkconfig  sdkconfig.old  sdkconfig.test
components/task/: CMakeLists.txt  key_task.c  led_task.c  pwm_task.c
components/task/include/: key_task.h  led_task.h  pwm_task.h
main/: CMakeLists.txt  Kconfig.projbuild  action_task.c  board.c  bt_spp.c  gener_task.c  ha_mqtt.c  key_task.c  led_task.c  main.c  msg_queue.c  pwm_task.c  wifi_manager.c
main/include/: action_task.h  board.h  bt_spp.h  gener_task.h  ha_mqtt.h  key_task.h  led_task.h  msg_queue.h  pwm_task.h  wifi_manager.h
main/task/: pwm_task.c
